<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical" 
    android:gravity="center">
    
   <LinearLayout android:layout_width="match_parent"
       android:layout_margin="10dp"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:gravity="center">
       <ImageView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/weibo_0"/>
       <TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="12sp"
           android:text="@string/weibo"
           android:layout_marginLeft="10dp"/>
   </LinearLayout>
   <View android:layout_width="match_parent"
       android:layout_height="0.5dp"
       android:background="@color/split_line"/>
    <LinearLayout android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_margin="10dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:gravity="center">
       <ImageView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/zhifu_weixin"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="20dp"
           android:text="@string/weixin"
           android:textSize="12sp" />

   </LinearLayout>
   <View android:layout_width="match_parent"
       android:layout_height="0.5dp"
       android:background="@color/split_line"/>
    <LinearLayout android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_margin="10dp"
       android:layout_weight="1"
       android:orientation="horizontal"
       android:gravity="center">
       <ImageView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/qq_0"/>
       <TextView android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="12sp"
           android:text="@string/QQ"
           android:layout_marginLeft="10dp"/>
   </LinearLayout>
</LinearLayout>