<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<include layout="@layout/item_title_title"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12" >    

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_agd_goodsPhoto"
                android:layout_width="match_parent"
                android:layout_height="280dp" >
            </android.support.v4.view.ViewPager>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/with_splitLine" />

            <TextView
                android:id="@+id/tv_agd_goodsPhotoDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="首届我是拳王总决赛冠军签名拳套"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_agd_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:text="￥300.00"
                android:textColor="@color/main_red"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp" >

                <TextView
                    android:id="@+id/tv_agd_goldenGlove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/goldenGlove"
                    android:textColor="@color/remind_color"
                    android:textSize="10sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/split_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/goodsIntroduce"
                android:textColor="@color/main_text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:ellipsize="none"
                android:lineSpacingExtra="3dp"
                android:lineSpacingMultiplier="1.2"
                android:maxLines="300"
                android:singleLine="false"
                android:text=""
                android:textColor="@color/second_text"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/with_splitLine"
                android:gravity="center" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/xiangxia" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pushDown"
                    android:textColor="@color/remind_color"
                    android:textSize="10dp" />
                
            </LinearLayout>
            <WebView 
                android:id="@+id/shoping_details_webview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_agd_joinShoppingCar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/joinShoppingCar"
            android:textColor="@color/main_text"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_agds_buy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_red"
            android:text="@string/buy"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>