<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_dli_dreamPublicTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/split_line"
            android:padding="10dp"
            android:text="第10100010期（揭晓时间 2017-01-05 09:50:02）"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal" >

            <com.bigdata.xinhuanufang.custom.yuanjiaoImage
                android:id="@+id/iv_dli_dreamPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_dli_dreamGoods"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dreamGoods"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/tv_dli_dreamGoodsDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="iphone6 6Splus 5.5 寸专用背夹"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LuckyHumman"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/tv_dli_luckyHumman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="心动随你"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userID"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/tv_dli_userID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="123456(唯一不变标识)"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/joinNum"
                    android:textSize="12sp" />
                <TextView
                    android:id="@+id/tv_dli_joinNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_red"
                    android:text="12306人次"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>